<resources>
    <string name="app_name">12Dash</string>
    <string name="exit">Exit</string>
    <string name="singleplayer">SinglePlayer</string>
    <string name="multiplayer">Multiplayer</string>
    <string name="first">first</string>
    <string name="firstplayer">FirstPlayer</string>
    <string name="second">Second</string>
    <string name="button">Button</string>


    <string-array name="planets_array">
        <item>Mercury</item>
        <item>Venus</item>
        <item>Earth</item>
        <item>Mars</item>
        <item>Jupiter</item>
        <item>Saturn</item>
        <item>Uranus</item>
        <item>Neptune</item>
    </string-array>
</resources>