<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:background="#BBDEE4"
    tools:context=".MainActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#BBDEE4"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView

            android:id="@+id/textView"
            android:layout_width="600px"
            android:layout_height="60dp"
            android:layout_marginLeft="240px"
            android:layout_marginTop="200px"
            android:layout_marginBottom="200px"
            android:autoLink="none"
            android:editable="false"
            android:enabled="false"
            android:linksClickable="false"
            android:text=" 12 DASH GAME"
            android:textAlignment="center"
            android:textColor="#374D83"
            app:autoSizeTextType="uniform" />

        <Button
            android:id="@+id/btnMultiplayer"
            android:layout_width="265dp"
            android:layout_height="67dp"
            android:layout_marginStart="200px"
            android:layout_marginBottom="8dp"
            android:backgroundTint="#374D83"
            android:text="@string/multiplayer" />

        <Button
            android:id="@+id/btnSinglePlayer"
            android:layout_width="263dp"
            android:layout_height="69dp"
            android:layout_marginStart="200px"
            android:layout_marginBottom="12dp"
            android:backgroundTint="#374D83"
            android:text="@string/singleplayer" />

        <Button
            android:id="@+id/btnExit"
            android:layout_width="266dp"
            android:layout_height="63dp"
            android:layout_marginStart="200px"
            android:layout_marginBottom="340dp"
            android:backgroundTint="#374D83"
            android:text="@string/exit" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>